# xlsx2doc

./: .gitignore  Cargo.toml  README.md
docx-rs-0.3.4/: .cargo_vcs_info.json  Cargo.toml
docx-rs-0.3.4/src/documents/: document.rs  footer.rs  header.rs
docx-rs-0.3.4/src/documents/elements/: a_graphic.rs  a_graphic_data.rs  bold.rs  bold_cs.rs  bookmark_end.rs  bookmark_start.rs  color.rs  comment.rs  comment_range_end.rs  comment_range_start.rs  data_binding.rs  delete.rs  drawing.rs  fld_char.rs  footer_reference.rs  grid_span.rs  header_reference.rs  hyperlink.rs  indent.rs  indent_level.rs  insert.rs  instr_pageref.rs  instr_tc.rs  instr_text.rs  instr_toc.rs  justification.rs  numbering_id.rs  numbering_property.rs  outline_lvl.rs  page_size.rs  paragraph.rs  paragraph_property.rs  paragraph_property_change.rs  paragraph_style.rs  pic.rs  run.rs  run_property.rs  run_style.rs  section_property.rs  shading.rs  (+28 more)
docx-rs-0.3.4/src/types/: border_position.rs  height_rule.rs  page_margin.rs  special_indent_type.rs  text_direction_type.rs  vert_align_type.rs  vertical_align_type.rs  vertical_merge_type.rs  width_type.rs
example/: config.json  target.xlsx  template.docx
example/output/: -张赫.docx
resolve-xlsx-link/: package-lock.json  package.json  resolve-xlsx-link.js
src/lib/: bootstrap.rs  data_type.rs  docx.rs  mod.rs  utils.rs  xlsx.rs
