[package]
name = "excel_to_word"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib/mod.rs"

[profile.dev]
opt-level = 3

[dependencies]
serde_json = "1.0.79"
serde = { version = "1.0.117" }
docx-rs = { path = "./docx-rs-0.3.4" }
calamine = { version = "0.18.0", features = ["dates"] }
reqwest = "0.11.10"
tokio = { version = "1.13.0", features = ["full"] }
